--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -141,5 +141,8 @@
     <color name="color_1A00EEFF">#1A00EEFF</color>
     <color name="color_33FFFFFF">#33FFFFFF</color>
     <color name="color_99FFFFFF">#99FFFFFF</color>
+    <color name="color_E53B37A7">#E53B37A7</color>
+    <color name="color_CCFFFFFF">#CCFFFFFF</color>
+    <color name="color_FF00A7FF">#FF00A7FF</color>
 
 </resources>
