--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -386,9 +386,11 @@
     <dimen name="dp_410">410dp</dimen>
     <dimen name="dp_422">422dp</dimen>
     <dimen name="dp_436">436dp</dimen>
+    <dimen name="dp_448">448dp</dimen>
     <dimen name="dp_456">456dp</dimen>
     <dimen name="dp_472">472dp</dimen>
     <dimen name="dp_500">500dp</dimen>
+    <dimen name="dp_540">540dp</dimen>
     <dimen name="dp_600">600dp</dimen>
     <dimen name="dp_640">640dp</dimen>
     <dimen name="dp_720">720dp</dimen>
