--- a/app/src/main/res/layout/fragment_go_back.xml
+++ b/app/src/main/res/layout/fragment_go_back.xml
@@ -12,7 +12,7 @@
         android:id="@+id/constraintLayoutGoBack"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background2"
+        android:background="@drawable/bg"
         tools:context=".view.fragment.HomeFragment">
 
         <ImageView
